# SemanticFlowSR

./: .gitignore  AGENT.md  AGENTS.md  PLAN.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.planning/: .active_plan
docs/: ALGORITHM.md  ALGORITHM_COMPLETE_EXPRESSION_SEMANTIC_FM.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE_EXPRESSION_SEMANTIC_FM.md  EVAL_87_ADAPTATION.md  IMPROVEMENT_NOTES.md  MATH.md  README.md  RESULTS.md  THEORY_MAPPING.md
logs/: README.md
results/: README.md
scripts/: __init__.py  analyze_graph_flow_run.py  archive_paper_metrics.py  audit_graph_stage1_target_field.py  build_paper_complete_results.py  build_paper_results.py  build_semantic_flow_trace_cache.py  cache_pmlb_subset.py  check_baselines_sanity.py  check_external_baseline_preflight.py  check_external_baseline_results.py  create_benchmark_task_split.py  distill_gp_events_from_results.py  generate_symbolicgpt_subset.py  generate_trace_dataset.py  materialize_feynman.py  materialize_formula_benchmark.py  materialize_symbolicgpt_benchmark.py  postprocess_typed_op_bfgs.py  prepare_benchmark_suites.py  probe_gt_trace_recovery_over_theta0.py  run_block_risk_flow.py  run_bootstrap_gates_gpu.sh  run_deap_baseline.py  run_diffusion_sr_baseline.py  run_dsr_baseline.py  run_e2e_baseline.py  run_edge_flow.py  run_experiment.py  run_external_baseline_matrix.py  run_gplearn_baseline.py  run_hvae_baseline.py  run_local_diffusion_reference.py  run_nesymres_baseline.py  run_nggp_baseline.py  run_one_step_semantic_fisher_cycle_gpu.sh  run_paper_complete_benchmarks.sh  (+12 more)
(+332 files in other folders)
